# temporary-anti-spam-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example-.env
.github/workflows/: rust.yml
src/: main.rs
