[package]
name = "temporary-anti-spam-bot"
version = "0.2.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.0"
futures = "0.3.19"
serenity = { version = "0.10.9", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "unstable_discord_api"] }
tokio = { version = "1.20.4", features = ["full"] }
